--- a/index.html
+++ b/index.html
@@ -1,4 +1,53 @@
+<!DOCTYPE html>
 <html>
-<head>CV Elias BOOMER</head>
-<body> Cv elias 
-Warzone Player since season 3 of warzone 2019 </body>
+<head><h1>BOOMER Warzone</h1>
+    <div style="border: 5px solid">
+    Bonne Lecture</div>
+      <p>Que le meilleur gagne</p>
+   <br> <titl>Elias BOOMER Warzone</titl>
+    </head>
+   <br> <body>
+         
+
+<ul>
+       <li>Nom : BOOMER</li>
+       <li> Âge : 19 ans</li>
+       <li>Nationalité : Francais</li>
+       <li>E-mail : oioioi@kekw.com</li>
+       <li> Twitch/YouTube : skouizi.com</li>
+       <li> Discord : eliasboomer</li>
+       </ul>
+       <br>
+       
+Profil:
+   <br>
+   <br>    Passionné de jeux vidéo compétitif,
+    je suis un joueur spécialisé dans Call of Duty: Warzone avec plusieurs années d’expérience.
+    <br>Je maîtrise les mécaniques du jeu et dispose d’une solide expérience dans les stratégies Battle Royale, les placements et la communication en équipe.
+     <br> Engagé dans le développement de ma carrière d’e-sportif,
+    <br>
+    <br> 
+       <br> Statistiques clés :
+       <br>
+       <br>
+       <li> • Victoires totales : 2</li>
+        <li>  •	Kills totaux : 5 (pascifit)</li>
+        <li>•	Ratio K/D (Kill/Death) : 0.02</li>
+        <li> •	Top 10 : 7</li>
+        <li> •	Temps de jeu total : 10487h</li>
+        <li> •	Tirs à la tête : 2%</li>
+        <li>•	Moyenne de dégâts par partie : 27</li>
+        <li>  •	Ratio de précision : 7%</li>
+      </li>
+      <br>En conclusion mes compétences et mon archarnement font de moi un atout de taille dans la formation de votre équipe
+<br>
+</body>
+<footer>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+Développer et rédiger par AVT conseil
+      </html> 
