--- a/index.html
+++ b/index.html
@@ -1,53 +1,108 @@
 <!DOCTYPE html>
-<html>
-<head><h1>BOOMER Warzone</h1>
-    <div style="border: 5px solid">
-    Bonne Lecture</div>
-      <p>Que le meilleur gagne</p>
-   <br> <titl>Elias BOOMER Warzone</titl>
-    </head>
-   <br> <body>
-         
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CV Elias</title>
+    <link rel="stylesheet" href="style.css">
 
-<ul>
-       <li>Nom : BOOMER</li>
-       <li> Âge : 19 ans</li>
-       <li>Nationalité : Francais</li>
-       <li>E-mail : oioioi@kekw.com</li>
-       <li> Twitch/YouTube : skouizi.com</li>
-       <li> Discord : eliasboomer</li>
-       </ul>
-       <br>
-       
-Profil:
-   <br>
-   <br>    Passionné de jeux vidéo compétitif,
-    je suis un joueur spécialisé dans Call of Duty: Warzone avec plusieurs années d’expérience.
-    <br>Je maîtrise les mécaniques du jeu et dispose d’une solide expérience dans les stratégies Battle Royale, les placements et la communication en équipe.
-     <br> Engagé dans le développement de ma carrière d’e-sportif,
-    <br>
-    <br> 
-       <br> Statistiques clés :
-       <br>
-       <br>
-       <li> • Victoires totales : 2</li>
-        <li>  •	Kills totaux : 5 (pascifit)</li>
-        <li>•	Ratio K/D (Kill/Death) : 0.02</li>
-        <li> •	Top 10 : 7</li>
-        <li> •	Temps de jeu total : 10487h</li>
-        <li> •	Tirs à la tête : 2%</li>
-        <li>•	Moyenne de dégâts par partie : 27</li>
-        <li>  •	Ratio de précision : 7%</li>
-      </li>
-      <br>En conclusion mes compétences et mon archarnement font de moi un atout de taille dans la formation de votre équipe
-<br>
+    <style>
+
+        body {
+            background-image: url('../CVBOOMER/image/arriereplan.jpg');
+            background-color: rgb(255, 255, 255);
+            background-size: cover;
+            text-align: center;
+            font-family: Arial, sans-serif;
+            color: #333;
+        }
+
+        h1 {
+            padding: 20px;
+            background-color: rgba(0, 0, 0, 0.7); 
+            color: white;
+            text-align: center;
+            margin-top: 0;
+        }
+
+        .container {
+            background-color: rgba(0, 0, 0, 0.7); 
+            color: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+            max-width: 800px;
+            margin: 20px auto;
+            text-align: left;
+        }
+
+        .navbar a {
+            margin: 10px;
+            text-decoration: none;
+            color: #fefeff;
+        }
+
+        .navbar {
+            background-color: #11113e;
+            padding: 10px;
+            text-align: center;
+        }
+
+
+        p{
+
+
+
+
+
+    }
+    </style>
+</head>
+<body>
+
+    <!-- Barre de navigation -->
+    <header class="navbar">
+        <a href="index.html">Accueil</a>
+        <a href="contact.html">Contact</a>
+        <a href="warzone.html">Warzone</a>
+    </header>
+
+
+    <div class="container">
+        <h1>Elias</h1>
+        <p><strong>Âge :</strong> 19 ans</p>
+        <p><strong>Études :</strong> Ingénierie Informatique</p>
+        <p><strong>Email :</strong> elias@kekw.com</p>
+        <p><strong>Téléphone :</strong> +33 1 23 45 67 89</p>
+
+        <h2>Présentation</h2>
+        <p>Je m’appelle Elias, j’ai 19 ans et je suis actuellement étudiant en Ingénierie Informatique. J’ai vécu dans plusieurs pays anglophones, notamment à Boston (États-Unis) et en Angleterre, ce qui m’a permis de développer une bonne maîtrise de l’anglais.</p>
+
+        <h2>Formation</h2>
+        <ul>
+            <li>2022 - Présent : Études d’Ingénierie Informatique</li>
+            <li>2021 : Obtention du Baccalauréat (mention à préciser)</li>
+            <li>2019 : Obtention du BAFA (Brevet d’Aptitude aux Fonctions d’Animateur)</li>
+        </ul>
+
+        <h2>Expériences</h2>
+        <ul>
+            <li>Séjour à Boston : Vie à l’étranger, immersion dans la culture américaine, renforcement des compétences en anglais.</li>
+            <li>Séjour en Angleterre : Vie à l’étranger, immersion dans la culture britannique, perfectionnement de l’anglais.</li>
+            <li>Animateur : Animation de groupes de jeunes lors de séjours en colonies de vacances après l’obtention du BAFA.</li>
+        </ul>
+
+        <h2>Compétences</h2>
+        <ul>
+            <li>Langues : Français (natif), Anglais (courant)</li>
+            <li>Informatique : Connaissances de base en développement logiciel (à approfondir avec les études)</li>
+            <li>Adaptabilité : Expérience dans différents contextes culturels</li>
+        </ul>
+    </div>
+
+    <footer>
+        <p>Développé et rédigé par Elias</p>
+    </footer>
+
 </body>
-<footer>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-Développer et rédiger par AVT conseil
-      </html> 
+</html>
