--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body {
   }
 }
         body {
-            background-image: url('../CVBOOMER/image/arriereplan.jpg');
+            background-image: url('../image/arriereplan.jpg');
             background-color: rgb(255, 255, 255);
             background-size: cover;
             text-align: center;
