--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <style>
        
  body {
-background-image:url(/image/montagne.jpeg);
+background-image:url(../image/montagne.jpeg);
 background-position:  center;
 }
 
