--- a/warzone.html
+++ b/warzone.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url('../CVBOOMER/image/classe.jpg');
+            background-image: url('../image/classe.jpg');
             background-size: cover;
             background-position: center;
             color: #ffffff;
