--- a/index.html
+++ b/index.html
@@ -7,13 +7,50 @@
     <link rel="stylesheet" href="style.css">
 
     <style>
+
+body {
+  font-size: 16px;
+  margin: 20px;
+  padding: 20px;
+}
+
+.container {
+  width: 1000px;
+  margin: 0 auto;
+}
+
+@media (max-width: 768px) {
+  body {
+    font-size: 14px;
+    margin: 10px;
+    padding: 10px;
+  }
+
+  .container {
+    width: 100%;
+  }
+}
+
+
+  .container {
+    width: 100%;
+  }
+}
         body {
-            background-image: url('../image/arriereplan.jpg');
+            background-image: url('/image/arriereplan.jpg');
             background-color: rgb(255, 255, 255);
             background-size: cover;
             text-align: center;
             font-family: Arial, sans-serif;
             color: #333;
+        }
+
+        h1 {
+            padding: 20px;
+            background-color: rgba(0, 0, 0, 0.7); 
+            color: white;
+            text-align: center;
+            margin-top: 0;
         }
 
         .container {
@@ -26,26 +63,6 @@
             margin: 20px auto;
             text-align: left;
         }
-
-        @media (max-width: 768px) {
-          test {
-            font-size: 14px;
-            margin: 10px;
-            padding: 10px;
-          }
-
-
-
-
-        h1 {
-            padding: 20px;
-            background-color: rgba(0, 0, 0, 0.7); 
-            color: white;
-            text-align: center;
-            margin-top: 0;
-        }
-
-
 
         .navbar a {
             margin: 10px;
@@ -60,6 +77,13 @@
         }
 
 
+        p{
+
+
+
+
+
+    }
     </style>
 </head>
 <body>
